# serenade

./: .dockerignore  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  build.gradle  settings.gradle
.githooks/: post-commit  pre-commit
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug-report.md  feature-request.md
buildSrc/src/main/groovy/: AntlrGenerateTask.groovy
client/: build.gradle  main.webpack.ts  package-lock.json  package.json  renderer.webpack.ts  tailwind.config.js  tsconfig.json
client/src/main/: active.ts  api.ts  app.ts  bridge.ts  events.ts  examples.ts  index.ts  log.ts  nux.ts  settings.ts
client/src/main/execute/: command-handler.ts  executor.ts  insert-history.ts  native-commands.ts  system.ts
client/src/main/ipc/: custom.ts  local.ts  plugin-manager.ts  server.ts
client/src/main/stream/: chunk-manager.ts  chunk-queue.ts  microphone.ts  stream.ts
client/src/main/windows/: language-switcher.ts  main.ts  mini-mode.ts  revision-box.ts  settings.ts  text-input.ts  window.ts
client/src/renderer/: app.tsx  events.ts  index.tsx
client/src/renderer/components/: alternatives-list.tsx  listen-status.tsx  listen-toggle.tsx  loading-bar.tsx  nux.tsx  select.tsx  settings-button.tsx  spinner.tsx  toggle.tsx  update-notification.tsx
client/src/renderer/css/: main.css
client/src/renderer/pages/: accessibility-permission.tsx  alternatives.tsx  languages.tsx  loading.tsx  mini-mode.tsx  revision-box.tsx  settings.tsx  text-input.tsx  title-bar.tsx  unsupported-os.tsx
client/src/renderer/state/: actions.ts  reducer.ts  store.ts
client/src/shared/: alternatives.ts  endpoint.ts  languages.ts  metadata.ts  plugins.ts  tutorial.ts
client/src/tutorials/: chrome-basics.json  cplusplus-basics.json  csharp-basics.json  formatting.json  go-basics.json  java-basics.json  javascript-advanced.json  javascript-basics.json  navigation.json  python-advanced.json  python-basics.json  python-demo.json  ruby-basics.json  rust-basics.json  typescript-demo.json
client/static/custom-commands-server/: package-lock.json  package.json  serenade-custom-commands-server.js  serenade-custom-commands-server.min.js
code-engine/: build.gradle
code-engine/server/: CMakeLists.txt
code-engine/server/config-generator/: config_generator.cc
code-engine/server/include/: io.h  rescorer_extension.h  text_nbest_input.h  token_encryption.h
code-engine/server/server/: code_engine_server.cc
code-engine/server/src/: io.cc  text_nbest_input.cc  token_encryption.cc
config/: Dockerfile  docker-compose.yaml  languages.yaml  models.yaml  services.yaml
core/: build.gradle
core/src/main/antlr/: ANTLRv4Lexer.g4  CommandLexer.g4.hbs  CommandParser.g4.hbs
core/src/test/resources/: base.yaml  bash.yaml  change.yaml  cplusplus.yaml  csharp.yaml  dart.yaml  default.yaml  descriptions.yaml  errors.yaml  formatting.yaml  go.yaml  html.yaml  java.yaml  javascript.yaml  kotlin.yaml  python.yaml  required.yaml  ruby.yaml  rust.yaml  scss.yaml  system.yaml  transcripts.yaml  type.yaml
corpusgen/: build.gradle
corpusgen/src/main/resources/: acronyms.txt
corpusgen/src/test/resources/: multi-part.yaml  partial.yaml
docs/: building-client.md  building.md  codebase-layout.md  generating-data.md  grammars.md  model-architecture.md  request-lifecycle.md  training-models.md
grammarflattener/: build.gradle
offline/: build.gradle
offline/src/test/resources/: benchmark.c  benchmark.cs  benchmark.go  benchmark.java  benchmark.js  benchmark.py  benchmark.rb  benchmark.rs  function1.py  function1_add_function.py
offline/tutorials/: chrome-basics.json  cplusplus-basics.json  csharp-basics.json  formatting.json  go-basics.json  java-basics.json  javascript-advanced.json  javascript-basics.json  navigation.json  python-advanced.json  python-basics.json  python-demo.json  ruby-basics.json  rust-basics.json  typescript-demo.json
patches/kaldi/: stateless.patch
patches/marian/: fix-warnings.patch  max-history.patch
replayer/: build.gradle
scripts/serenade/: config.py  packages.py
scripts/serenade/code_engine/: __init__.py
scripts/serenade/repositories/: __init__.py  github.py
scripts/serenade/speech_engine/: __init__.py
scripts/serenade/speech_engine/lexicon/: cmu_programming_alternative.txt  cmudict-0.7b-utf-8.txt  html_attributes.txt  html_tags.txt  misc.txt  missing_english.txt  top_100_bash.txt  top_100_cplusplus.txt  top_100_csharp.txt  top_100_go.txt  top_100_html.txt  top_100_java.txt  top_100_javascript.txt  top_100_python.txt  top_100_ruby.txt  top_100_rust.txt  top_programming.txt
scripts/serenade/speech_engine/spelling/: lexiconp_disambig.txt
scripts/serenade/speech_engine/training/: create-const-arpa.sh  lm-to-kaldi-model.sh
scripts/setup/: build-dependencies.sh  paths.sh  setup-mac.sh  setup-ubuntu.sh
speech-engine/: build.gradle
speech-engine/server/: CMakeLists.txt
speech-engine/server/include/: compile_graph.h  hints.h  io.h  lattice_ops.h  phoneme_converter.h  recognizer.h  recognizer_config.h  rescorer.h
speech-engine/server/server/: speech_engine_server.cc
speech-engine/server/src/: compile_graph.cc  hints.cc  io.cc  lattice_ops.cc  phoneme_converter.cc  recognizer.cc  rescorer.cc
toolbelt/: build.gradle
toolbelt/src/main/proto/: code-engine.proto  core.proto  grammar.proto  speech-engine.proto
toolbelt/src/main/resources/: logback-test.xml  logback.xml  logging-test.properties
web/: gatsby-config.js  package-lock.json  package.json
web/src/components/: battery.tsx  block.tsx  blog.tsx  buttons.tsx  custom-commands.tsx  features.tsx  footer.tsx  hero.tsx  link.tsx  navigation.tsx  pages.tsx  plugin-grid.tsx  snippet.tsx  transcript.tsx
web/src/components/docs/: code-table.tsx  data.tsx  example-table.tsx  (+4 more)
web/src/layouts/: index.js
web/src/lib/: store.tsx
web/src/pages/: 404.tsx  backend.tsx  blog.tsx  code-privacy.tsx  community.tsx  docs.tsx  download.tsx  everywhere.tsx  fullstack.tsx  health.tsx  index.tsx  install.tsx  plugins.tsx  privacy.tsx  terms.tsx
web/src/styles/: global.css
(+377 files in other folders)
